modification for landing page 0.1.0

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -94,7 +94,7 @@ body {
   }
   #clavier_img{
     float: right;
-    height: 400px;
+    height: 400px !important;
   }
   .left_cont{
     width: 60%;
