modification for landing page 0.1.6

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -23,7 +23,7 @@ body {
   
   /* Header */
   header {
-    background-color: black;
+    background-color: #1D2955;
     padding: 10px 0;
     color: white;
     position: sticky;
@@ -55,7 +55,7 @@ body {
   }
 .button {
   font-size: 1.4em;
-  padding: 0.6em 0.8em;
+  padding: 0.6em 1em;
   border-radius: 0.5em;
   border: none;
   background-color: #000;
@@ -63,7 +63,10 @@ body {
   cursor: pointer;
   box-shadow: 2px 2px 3px #000000b4;
 }
-
+.button a{
+  margin: 0;
+  padding: 0;
+}
 .btn-container {
   position: relative;
   padding: 3px;
@@ -106,7 +109,7 @@ body {
   }
   
   .hero {
-    background: linear-gradient(to right, #e3f2fd, #bbdefb);
+    background: linear-gradient(90deg, #1cb5e0, #000045);
     padding: 100px 20px;
     text-align: center;
   }
@@ -126,12 +129,12 @@ body {
   }
   
 .btn {
-  --color: #00A97F;
-  --color2: rgb(10, 25, 30);
+  --color: #25092E;
+  --color2: #efefd7;
   padding: 0.8em 1.75em;
   background-color: transparent;
   border-radius: 6px;
-  border: .3px solid var(--color);
+  border: 3px solid var(--color);
   transition: .5s;
   position: relative;
   overflow: hidden;
@@ -155,7 +158,7 @@ body {
   left: 25%;
   z-index: -1;
   transition: .5s ease-out;
-  background-color: var(--color);
+  background-color: var(--color2);
  }
  
  .btn::before {
@@ -193,7 +196,7 @@ body {
   /* Features */
   .features {
     padding: 60px 20px;
-    background: linear-gradient(to right, #e3f2fd, #bbdefb);
+    background: linear-gradient(90deg, #1cb5e0, #000045);
   }
   
   .feature-list {
@@ -204,7 +207,8 @@ body {
   }
   
   .feature-card {
-    background: white;
+    background: #223f9b;
+    color: #efefd7;
     height: fit-content;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
