adding progres bar accuracy for finish game

--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -1,33 +1,32 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-#curve_chart{
-    width: 90%;
-    height: 70vh;
+#curve_chart {
+  width: 90%;
+  height: 70vh;
 }
-.outer{
-    width: 100px;
-    height: 100px;
-    margin: 10px auto;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: conic-gradient(blue 30deg, rgb(255, 255, 255) 0deg);
-    box-shadow: -5px -3px 14px 1px #000000, 0px 1px 14px 0px #ffffff;
+.outer {
+  width: 100px;
+  height: 100px;
+  margin: 10px auto;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 2s ease;
+  box-shadow: -5px -3px 14px 1px #000000, 0px 1px 14px 0px #ffffff;
 }
-.inner{
-    width: 80%;
-    height: 80%;
-    background-color: white;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: inset 0px 0px 4px 0px black;
-    font-weight: bolder;
-    font-size: 1rem;
-
+.inner {
+  width: 80%;
+  height: 80%;
+  background-color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0px 0px 4px 0px black;
+  font-weight: bolder;
+  font-size: 1rem;
 }
