commit update interface

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -27,13 +27,22 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    border: 1px solid red;
 }
 nav h1{
     text-align: center;
     font-size: xx-large;
+    margin-top: 15px;
+}
+ img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 .switch {
     font-size: 17px;
+    margin-top: 20px;
     position: relative;
     display: inline-block;
     width: 3.5em;
@@ -105,3 +114,61 @@ nav h1{
     }
   }
 
+header{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center; 
+    margin-bottom: 30px;
+}
+header h1{
+    font-size: 2.5em;
+    margin-bottom: 15px;
+}
+
+header label, header select{
+    font-size: 1em;
+    padding: 5px 10px;
+    border: 1px solid #636161;
+    border-radius: 5px;
+}
+.je_sais_pas {
+    display: flex;
+    flex-direction: row;
+    gap: 35px;
+    border: 1px solid red;
+    justify-content: center;
+    width: 80%;
+    padding:10px;
+    border-radius: 10px;
+}
+#word-display{
+    border: 1px solid red;
+    text-align: center;
+    font-size: 1.9rem;
+}
+#keyboard {
+    font-size: 2.3rem;
+
+}
+#input-field{
+    margin-left: 300px;
+    margin-top: 20px;
+    width: 50%;
+    padding: 10px;
+}
+#keyboard {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 5px;
+    max-width: 300px;
+    margin-top: 10px;
+}
+.key {
+    padding: 10px;
+    text-align: center;
+    background: #eee;
+    border: 1px solid #ccc;
+    cursor: pointer;
+    user-select: none;
+}
