--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -34,7 +34,7 @@ nav h1{
 }
 
 .info{
-    border: 2px solid black;
+    border: 2px solid var(--secondary);
     padding: 10px;
     border-radius: 5px;
     width: fit-content;
