--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -40,55 +40,6 @@ nav h1{
     border-radius: 50%;
     object-fit: cover;
 }
-.switch {
-    font-size: 17px;
-    position: relative;
-    display: inline-block;
-    width: 3.5em;
-    height: 2em;
-}
-.switch input {
-    opacity: 0;
-}
-.slider {
-    position: absolute;
-    cursor: pointer;
-    inset: 0;
-    border: 2px solid #414141;
-    border-radius: 50px;
-    transition: all 0.4s ease;
-    background-color: aliceblue;
-}
-.switch input + .slider {
-    box-shadow: 0 0 20px rgba(68, 70, 71, 0.8);
-    border: 2px solid rgba(68, 70, 71, 0.8);
-}
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 1.4em;
-    width: 1.4em;
-    left: 0.2em;
-    bottom: 0.2em;
-    background-image: url(../img/soleil.png);
-    background-size: contain;
-    border-radius: inherit;
-    transition: all 0.4s ease;
-}
-.switch input:checked .slider{
-    background-color: #414141;
-}
-.switch input:checked + .slider {
-    box-shadow: 0 0 20px rgba(9, 117, 241, 0.8);
-    border: 2px solid #0974f1;
-    background-color: #414141;
-}
-  
-.switch input:checked + .slider:before {
-    transform: translateX(1.5em);
-    background-image: url(../img/lune.jpg);
-}
-
 .info{
     border: 2px solid var(--secondary);
     padding: 10px;
@@ -115,7 +66,7 @@ nav h1{
 
 header{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 10px;
     align-items: center; 
     margin-bottom: 30px;
