--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -91,10 +91,10 @@ nav h1{
 
 .info{
     border: 2px solid black;
-    padding: 10px;
+    padding: 5px;
     border-radius: 5px;
-    width: fit-content;
-    height: 70px;
+    width: 160px;
+    height: 50px;
 }
 
 #time{
@@ -134,10 +134,10 @@ header label, header select{
 .je_sais_pas {
     display: flex;
     flex-direction: row;
-    gap: 35px;
+    gap: 20px;
     border: 1px solid red;
     justify-content: center;
-    width: 80%;
+    width: 90%;
     padding:10px;
     border-radius: 10px;
 }
@@ -156,18 +156,39 @@ header label, header select{
     width: 50%;
     padding: 10px;
 }
-#keyboard {
+#information {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+.keyboard {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     gap: 5px;
-    max-width: 300px;
-    margin-top: 10px;
-}
-.key {
-    padding: 10px;
-    text-align: center;
+    margin-left: 180px;
+    margin-top: 20px;
+    border: 1px solid red;
+    width: 70%;
+  }
+
+  .key {
     background: #eee;
-    border: 1px solid #ccc;
+    border: none;
+    padding: 15px;
+    font-size: 1em;
+    border-radius: 8px;
     cursor: pointer;
-    user-select: none;
-}
+    transition: background 0.2s;
+  }
+
+  .key:hover {
+    background: #ddd;
+  }
+
+  .key.special {
+    grid-column: span 2;
+    background-color: #ccc;
+  }
+
+
