add: css in the index

--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -87,7 +87,7 @@ body{
 }
 #btn-restart a{
   text-decoration: none;
-  color: var(--secondary);
+  color: black;
   font-weight: bold;
 }
 .tsyaiko {
