--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -35,19 +35,25 @@ nav h1{
     margin-top: 15px;
 }
  img {
-    width: 80px;
-    height: 80px;
+    width: 110px;
+    height: 110px;
     border-radius: 50%;
     object-fit: cover;
 }
 .info{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
     border: 2px solid var(--secondary);
     padding: 10px;
     border-radius: 5px;
-    width: 160px;
+    width: 15%;
     height: 50px;
 }
-
+.info p {
+    margin-top: 3px;
+    margin: auto;
+}
 #time{
     display: flex;
     flex-direction: row;
