style: modify charts

--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -47,12 +47,12 @@ body{
   align-items: center;
   justify-content: center;
   transition: all 2s ease;
-  box-shadow: -5px -3px 14px 1px var(--secondary), 0px 1px 14px 0px #ffffff;
 }
 .inner {
   width: 80%;
   height: 80%;
-  background-color: white;
+  background-color: var(--primary);
+  color: var(--secondary);
   border-radius: 50%;
   display: flex;
   justify-content: center;
