--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,18 +6,18 @@
     font-family: 'DS-DIGIT';
     src: url(../font/DS-DIGIT.TTF);
 }
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Quicksand';
 }
 
 :root{
     --primary: white;
     --secondary: black;
     --tertiary: #37404f;
+    --quatre: black;
+    --cinq: white;
 }
 
 body{
@@ -25,6 +25,7 @@ body{
     color: var(--secondary);
     transition: all 0.4s ease;
     margin-inline: 40px;
+    font-family: 'Quicksand';
 }
 nav{
     margin-bottom: 20px;
@@ -33,6 +34,7 @@ nav{
     height: 10vh;
     display: flex;
     flex-direction: row;
+    font-family: 'DS-DIGIT';
     justify-content: space-between;
     h1{
         margin-top: 18px;
@@ -46,6 +48,10 @@ h1 span {
 }
 .logo{
     display: flex;
+    flex-direction: row;
+}
+#theme{
+    background-image: linear-gradient(to right var(--primary) , var(--secondary));
 }
 #information {
     display: flex;
@@ -67,12 +73,21 @@ h1 span {
     flex-direction: row;
     font-family: 'DS-DIGIT';
     justify-content: center;
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: var(--tertiary);
 }
 #word-display{
+    margin-top: 20px !important;
+    border-radius: 15px;
+    padding: 20px 100px;
+    margin: auto;
+    max-height: 9rem;
+    color: var(--cinq);
+    overflow-y: hidden;
     animation: 1s fadeIn 1;
-
+    background-color: var(--quatre);
+    border: 2px solid var(--secondary);
+    width: 80%;
 }
 @keyframes fadeIn {
     from {
