--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -12,7 +12,7 @@
 :root {
   --primary: #777;
   --secondary : #333;
-  --tertiary : #333;
+  --tertiary : #7e0000;
 }
 body{
   background-color: var(--primary);
@@ -35,7 +35,6 @@ body{
 }
 .accuracy p{
   text-align: center;
-  
   color: var(--secondary);
 }
 .outer { 
@@ -56,8 +55,7 @@ body{
   border-radius: 50%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  box-shadow: inset 0px 0px 4px 0px black;
+  align-items: center;  
   font-weight: bolder;
   font-size: 1rem;
 }
@@ -90,7 +88,7 @@ body{
 }
 #btn-restart a{
   text-decoration: none;
-  color: white;
+  color: var(--secondary);
 }
 .tsyaiko {
   display: flex;
