--- a/assets/css/finish.css
+++ b/assets/css/finish.css
@@ -17,9 +17,20 @@
 body{
   background-color: var(--primary);
 }
+nav{
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding-left: 50px;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  font-family: 'DS-DIGIT';
+  justify-content: space-between;
+}
 #curve_chart {
   width: 90%;
-  height: 70vh;
+  height: 60vh;
+  margin-top: -2rem;
 }
 .time{
   display: flex;
@@ -77,19 +88,59 @@ body{
 #wpm-value {
   transition: transform 0.1s ease-in-out, color 0.1s ease-in-out;
 }
-
-#btn-restart {
-  margin-left: 45%;
-  width: 10%;
-  padding: 10px;
-  border-radius: 5px;
+.logo h1{
+  margin-top: 18px;
+  color: #00ffff;
+  margin-right: 82%;
+  display: flex;
+  flex-direction: row;
+}
+.logo h1 span {
+margin-left: 5px;
+color: #8a2be2;
+}
+.logo{
+display: flex;
+flex-direction: row;
+}
+.btn {
+  width: 11rem;
+  height: 3rem;
+  margin-left: 42%;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 0.625em;
+  font-size: 20px;
+  font-weight: bold;
   cursor: pointer;
-  background-color: var(--primary);
-}
-#btn-restart a{
-  text-decoration: none;
-  color: var(--secondary);
-}
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+ }
+ 
+ .btn:hover {
+  color: black;
+ }
+ 
+ .btn:after {
+  content: "";
+  background: white;
+  position: absolute;
+  z-index: -1;
+  left: -20%;
+  right: -20%;
+  top: 0;
+  bottom: 0;
+  transform: skewX(-45deg) scale(0, 1);
+  transition: all 0.5s;
+ }
+ 
+ button:hover:after {
+  transform: skewX(-45deg) scale(1, 1);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+ }
 .tsyaiko {
   display: flex;
   flex-direction: row;
