fix(time in the end): adding time and nbr of word

--- a/assets/css/tuto.css
+++ b/assets/css/tuto.css
@@ -203,7 +203,12 @@ h2, p {
     background-color: var(--secondary);
     color: var(--primary);
   }
-  
+#feedback-off{
+    position: absolute;
+    top: -7%;
+    left: 93%;
+    width: fit-content;
+}  
 
 #results-container{
     color: white;
