--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,6 +20,7 @@
     --tertiary: #37404f;
     --quatre: black;
     --cinq: white;
+    --font: 'Quicksand'
 }
 
 body{
@@ -27,7 +28,8 @@ body{
     color: var(--secondary);
     transition: all 0.4s ease;
     margin-inline: 40px;
-    font-family: 'Quicksand';
+    font-family: var(--font);
+    overflow-x: hidden;
 }
 nav{
     margin-bottom: 20px;
@@ -120,7 +122,7 @@ nav{
     border: none;
     color: var(--tertiary);
     font-size: 16px;
-    font-family: 'Quicksand';
+    font-family: var(--font);
     padding: 12px 15px;
     border-radius: 10px;
     cursor: pointer;
@@ -230,8 +232,11 @@ header{
     flex-direction: row;
     justify-content: center;
     gap: 10px;
-    margin-left: 7rem;
+    margin-left: 10rem;
+    animation: transLeft 1s ease;
+
 }
+
 header label, header select{
     font-size: 1em;
     border-radius: 5px;
@@ -240,14 +245,23 @@ header label, header select{
 header select{
     margin-right: 40px;
     margin-top: 10px;
-    font-family: 'Quicksand';
+    font-family: var(--font);
 }
-
+@keyframes transLeft {
+  0%{
+    opacity: 0;
+    margin-left: 100rem;
+  }
+  100%{
+    opacity: 1;
+    margin-left: 10rem;
+  }
+}
 .select {
     display: flex;
     flex-direction: column;
     margin: 10px;
-    font-family: 'Quicksand';
+    font-family: var(--font);
 }
 
 .select label {
@@ -291,7 +305,7 @@ header select{
     border-radius: 10px;
     width: 50%;
     padding: 10px;
-    font-family: 'Quicksand';
+    font-family: var(--font);
     font-weight: bolder;
 }
 
